  ! Implemented RDPID instruction
  ! Implemented VPOPCNTD/VPOPCNTQ AVX512 instructions

- I/O Devices
  - Busmouse
    - Added standard bus mouse support in addition to the existing InPort
      emulation code. (patch by Ben Lunt).
  - Hard drive
    - Several fixes in some disk image modes.
  - Sound
    - Added separate thread for the PCM data conversion.
  - USB
    - Added USB EHCI device emulation support (EHCI core ported from Qemu).
    - Added USB floppy (UFI/CBI) support (patch by Ben Lunt).
    - Added asynchronus USB packet completion support (needed by disk/cdrom
      seek and read/write latency emulation).
    - Implemented USB remote wakeup mechanism.
    - Fixed NAK response handling in all USB HCs.
    - Added common USB device option "debug" to turn on BX_DEBUG reporting at
      connection time.

-------------------------------------------------------------------------
Changes in 2.6.8 (May 3, 2015):

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness (critical bugfix for x86-64 emulation)
  - Memory type calculation support for Bochs debugger and instrumentation,
    to enable configure with --enable-memtype option.
  - CPUDB: Added Pentium (P54C) configuration to CPUDB
  - CPUDB: Added Broadwell ULT configuration to CPUDB
  - Updated definition of instrumentation callbacks, see description in
    instrumentation.txt / Fixed instrumentation examples

- Configure and compile
  - Configure option --enable-fast-function-calls now also used for MSVC nmake.
  - Some configure fixes for the GTK debugger support.

- GUI and display libraries
  - The VGA update timer mode now can be selected with the 'vga' option.
  - Release all pressed keys when the simwindow gets back the keyboard focus.
  - Win32 gui: Captured mouse cursor now really trapped in window.
  - SDL2: Implemented yes/no dialog (e.g. for VVFAT commit).
  - Some fixes for wxWidgets 3.0 and unicode version compatiblity.